# garmin_extract_automation

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  __init__.py  analytics.py  config.py  garmin_client.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  slack_notify.py  sync.py
.github/workflows/: ci.yml
docs/: AI-Driven Personal Project Workflow.md  Garmin Automation Project Blueprint.md  Garmin Automation Project Setup Guide.md  enhanced-segments-summary.md  project-overview.md  refactoring-guide.md  technical-specifications.md  usage-examples.md
src/garmin_sync/: __init__.py  api_client.py  cli.py  core.py  data_processor.py  models.py
test_venv/: pyvenv.cfg
tests/: __init__.py  test_analytics.py  test_config.py  test_core.py  test_garmin_client.py  test_refactored.py  test_slack_notify.py  test_sync.py
