[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-extract-automation"
version = "1.1.0"
description = "A Python tool for extracting comprehensive running activity data with enhanced segment-level metrics from Garmin Connect"
authors = [
    {name = "Your Name"}
]
dependencies = [
    "garminconnect==0.2.28",
    "python-dotenv==1.0.0"
]
requires-python = ">=3.7"

[project.scripts]
garmin-sync = "garmin_sync.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]